--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="d-flex row justify-content-start min-vh-100 bg-dark text-white">
+  <header class="container d-flex align-items-center justify-content-center p-0">
+    <h3 class="navbar-brand justify-content-around p-0">
+      My Budget App
+    </h3>
+  </header>
+
+  <section class="container">
+    <div class="row justify-content-center mt-5 gap-3">
+      <div class="col-12">
+        <div class="d-flex align-items-center justify-content-center">
+          <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="d-flex align-items-center justify-content-center">
+          <%= link_to 'Log In', new_user_session_path, class: 'btn btn-primary btn-lg btn-block' %>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
