--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="container mt-2">
+<div class="container mt-2 transactionz">
   <div class="row">
     <div class="col-md-12">
       <div class="category-list">
@@ -39,7 +39,7 @@
   </div>
 </div>
 
-<div class="d-flex container-fluid mt-2">
+<div class="d-flex container-fluid fixed-bottom">
   <div class="d-flex col justify-content-center align-items-center">
     <div class="col-md-1 mb-2 justify-content-center align-items-center w-100 h-50">
       <%= link_to new_category_path, class: 'btn btn-success text-white btn-block w-100 p-2' do %>
