--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,10 +1,9 @@
 <%= form_with(model: [@category, @transaction]) do |form| %>
-  <% if transaction.errors.any? %>
+  <% if @transaction.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
-
+      <h2><%= pluralize(@transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
       <ul>
-        <% transaction.errors.each do |error| %>
+        <% @transaction.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -26,7 +25,6 @@
     <%= form.collection_select :category_id, Category.all, :id, :name, { include_blank: 'Select a category' } %>
   </div>
 
-   
   <div class='mt-3'>
     <%= form.submit %>
   </div>
