--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -2,13 +2,18 @@
 
 <h1>Transactions</h1>
 
-<div id="transactions">
+<div id="transactions" class="d-flex flex-column col-md-6 transactionz justify-content-between">
   <% @transactions.each do |transaction| %>
     <%= render transaction %>
-    <p>
-      <%= link_to "Show this transaction", transaction %>
-    </p>
   <% end %>
 </div>
 
-<%= link_to "New transaction", new_transaction_path %>
+<div class="d-flex container-fluid fixed-bottom">
+  <div class="d-flex col justify-content-center align-items-center">
+    <div class="col-md-1 mb-2 justify-content-center align-items-center fixed-bottom">
+      <%= link_to new_transaction_path, class: 'btn btn-success text-white btn-block w-100 p-2' do %>
+        New Transaction
+      <% end %>
+    </div>
+  </div>
+</div>
