--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@
 
  /* Custom CSS for the navbar */
  body .main-cont {
-  height: 75px;
+    width: 100%;
   background-color: #0d6efd !important;
 }
 
@@ -93,6 +93,44 @@ h6 {
   overflow-y: auto; /* Add scrollbars if content overflows */
 }
 
-.transactionz {
-  height: 500px;
+.navbarNav {
+  display: none;
+  width: 100%;
 }
+  /* Add a class to style the expanded menu */
+  .menu-expanded {
+    display: block;/* Show the expanded menu */
+  }
+
+  .navbar-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #339bcf;
+    width: 75%;
+    height: 100%;
+    z-index: 999
+  }
+
+  .na {
+    background: #3bcf33;
+    width: 100%;
+  }
+
+  ul,
+  li {
+    list-style-type: none;
+    width: 100%;
+    padding: 0;
+  }
+
+  .icon {
+    width: 100%;
+  }
+
+  .nav-item,
+   .nav-link {
+    width: 100%;
+    color: #fff;
+
+  }
