--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,30 +1,57 @@
-<main class="container bg-black main-cont">
-  <nav class="navbar navbar-expand-lg navbar-light bg-bala-blue m-0 p-0">
-    <div class="container nav">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-</button>
-  
+<main class="container bg-black mai-cont">
+  <nav class="navbar navbar-expand-lg navbar-light m-0 p-0">
+    <div class="container nav p-0">
+      <button
+        id="navbar-toggler-button"
+        class="navbar-toggler d-lg-none"
+        type="button"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Arrow button -->
       <h3 class="navbar-brand text-white"><%= @page_name %></h3>
       <a href="javascript:history.back();" class="back-arrow d-lg-none">
         <i class="fas fa-arrow-left"></i>
       </a>
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <!-- Add Font Awesome avatar image -->
-        <i class="fas fa-user-circle fa-2x text-primary"></i>
-        <%= user.name %>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <!-- Add the overlay element -->
+      <div class="overlay" id="overlay"></div>
+
+      <div class="collapse navbar-collapse justify-content-between " id="navbarNav">
+      
+        <!-- Your navigation links -->
+        <div class=" navbar-nav ml-auto p-0  row d-flex justify-content-start align-items-center">
+          <div class="row align-items-center justify-items-center">
+          <!-- Add Font Awesome avatar image -->
+          <i class="fas fa-user-circle fa-6x text-primary mt-3 ml-auto p-0"></i>
+          <%= user.name %>
+          </div>
+          <ul class="">
+                       
             <li class="nav-item">
-                <%= link_to "Update account", edit_user_registration_path, class: 'nav-link' %>
+              <a class="nav-link text-white" href="#">Account Settings</a>
             </li>
             <li class="nav-item">
-                <%= button_to "Sign out", destroy_user_session_path, :method => :delete, class: "nav-link" %>
+              <a class="nav-link text-white" href="#">Category</a>
             </li>
-        </ul>
-    </div>
-      </div>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Transaction</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Contact</a>
+            </li>
+            
+          </ul>
+        </div>
+          <li class="nav-itm">
+              <!-- Logout button -->
+              <%= form_tag(destroy_user_session_path, method: :delete) do %>
+                <%= submit_tag('Log Off', class: 'btn btn-danger') %>
+              <% end %>
+            </li>
+        </div>
     </div>
   </nav>
 </main>
