--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -1,9 +1,9 @@
 <div id="<%= dom_id transaction %>">
   
 
-<div  class="container mt-2 fixed-height-container">
+<div  class="container mt-2">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <div class="category-list">
           <div class="col-md-4 mb-2">
             <div class="card category-card p-1">
