--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -112,8 +112,8 @@ h6 {
     z-index: 999
   }
 
-  .na {
-    background: #3bcf33;
+  .nav {
+    background: #339bcf;
     width: 100%;
   }
 
@@ -133,4 +133,18 @@ h6 {
     width: 100%;
     color: #fff;
 
+  }
+
+  nav {
+    height: 100%;
+  }
+
+  .close-icon {
+    position: absolute;
+    top: 10px;
+    right: 100px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    z-index: 999;
   }
