--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,6 +1,6 @@
 <main class="container bg-black mai-cont p-0">
-  <nav class="navbar navbar-expand-lg navbar-light m-0 p-0">
-    <div class="container nav p-0">
+  <nav class="navbar navbar-expand-lg navbar-light m-0 p-0 sticky-top">
+    <div class="container nav p-0 ">
       <button
         id="navbar-toggler-button"
         class="navbar-toggler d-lg-none"
@@ -12,25 +12,24 @@
 
       <!-- Arrow button -->
       <h3 class="navbar-brand text-white m-0 p-0"><%= @page_name %></h3>
-      <a href="javascript:history.back();" class="back-arrow d-lg-none">
+      <a href="javascript:history.back();" class="back-arrow d-lg-none text-white">
         <i class="fas fa-arrow-left"></i>
       </a>
     </div>
 
     <div class="collapse navbar-collapse justify-content-start " id="navbarNav">
-      <!-- Your navigation links -->
       <!-- Add the overlay element -->
       <div class="overlay" id="overlay">
         <!-- Close (X) icon -->
-        <i class="fas fa-times close-icon" id="close-icon"></i>
+        <i class="fas fa-times close-icon white" id="close-icon"></i>
       </div>
-      <div class=" navbar-nav ml-auto p-0  row d-flex justify-content-start align-items-center">
-        <div class="row align-items-center justify-items-center">
+      <div class=" navbar-nav ml-auto p-0 row-avata row d-flex justify-content-start align-items-center">
+        <div class=" avatar row align-items-center justify-items-center">
           <!-- Add Font Awesome avatar image -->
-          <i class="fas fa-user-circle fa-6x text-primary mt-3 ml-auto p-0"></i>
+          <i class=" avatar-img fas fa-user-circle fa-6x text-primary mt-3 ml-auto p-0"></i>
           <%= user.name %>
         </div>
-        <ul class="">
+        <ul class="item-nav">
           <li class="nav-item">
             <a class="nav-link text-white" href="#">Account Settings</a>
           </li>
