--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,8 +11,12 @@
                   <div class="d-flex col-md-3 justify-content-between">
                     <div class="col-md-2 w-3">
                       <p>
-                        <%= category.icon %>
+                        
                       </i></p>
+                      <div class="col-md-2 w-3">
+                      <!-- Use Font Awesome for custom icon -->
+                      <i class="fas fa-user-graduate fa-3x"></i>
+                    </div>
                     </div>
                     <div class="row-md-auto justify-content-between category-name">
                       <p><%= category.name %></p>
@@ -41,7 +45,5 @@
     </div>
   </div>
 </div>
-
-
 
 
