--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<div id="transactions" class="d-flex flex-column col-md-6 transactionz justify-content-between">
+<div id="transations" class=" ">
   <% @transactions.each do |transaction| %>
     <%= render transaction %>
   <% end %>
