Update render files

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,5 @@
 
+
 <div class="container mt-2 transactionz">
   <div class="row">
     <div class="col-md-12">
@@ -11,12 +12,8 @@
                   <div class="d-flex col-md-3 justify-content-between">
                     <div class="col-md-2 w-3">
                       <p>
-                        
+                        <%= category.icon %>
                       </i></p>
-                      <div class="col-md-2 w-3">
-                      <!-- Use Font Awesome for custom icon -->
-                      <i class="fas fa-user-graduate fa-3x"></i>
-                    </div>
                     </div>
                     <div class="row-md-auto justify-content-between category-name">
                       <p><%= category.name %></p>
@@ -45,5 +42,3 @@
     </div>
   </div>
 </div>
-
-
