--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,6 +1,8 @@
 <p style="color: green"><%= notice %></p>
 
-<div id="transations" class=" ">
+<h1>Transactions</h1>
+
+<div id="transactions">
   <% @transactions.each do |transaction| %>
     <%= render transaction %>
   <% end %>
