--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -1,40 +1,36 @@
-<div id="<%= dom_id transaction %>">
 
-<div  class="container mt-2 transactionz stick">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="category-list">
-          <div class="col-md-4 mb-2">
-            <div class="card category-card p-1">
-              <div class="col-md-6 category-item p-2">
-              <%= link_to transaction_path(transaction), class: "card-link" do %>
-                <div class="d-flex col-md-3 justify-content-between">
-                    <div class="row-md-2 w-3">
-                    <div class="3">
-                      <!-- Use Font Awesome for custom icon -->
-                      <i class="fas fa-user-graduate fa-3x"></i>
+
+<div id="<%= dom_id transaction %>">
+  <div  class="container mt-2 transactionz">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="category-list">
+            <div class="col-md-4 mb-2">
+              <div class="card category-card p-1">
+                <div class="col-md-6 category-item p-2">
+                <%= link_to transaction_path(transaction), class: "card-link" do %>
+                  <div class="d-flex col-md-3 justify-content-between">
+                      <div class="col-md-2 w-3">
+                        <p>
+                        <%= transaction.category.name if transaction.category %>
+                        </i></p>
+                      </div>
+                      <div class="row-md-auto justify-content-between category-name">
+                        <p><%= transaction.name %></p>
+                        <p class="p-0 m-0"><%= transaction.created_at.strftime('%d, %b %Y') %></p>
+                      </div>
+                      <div class="col-md-6 category-amount">
+                        <h5><%= number_to_currency(transaction.amount) %></h5>
+                      </div>
                     </div>
-                      <p>
-                      <%= transaction.category.name if transaction.category %>
-                      </i></p>
-                    </div>
-                    <div class="row-md-auto justify-content-between category-name">
-                      <p><%= transaction.name %></p>
-                      <p class="p-0 m-0"><%= transaction.created_at.strftime('%d, %b %Y') %></p>
-                    </div>
-                    <div class="col-md-6 category-amount">
-                      <h5><%= number_to_currency(transaction.amount) %></h5>
-                    </div>
-                    
-                  </div>
-                <% end %>
+                  <% end %>
+                </div>
               </div>
             </div>
-          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 </div>
 
