--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,41 @@
 <div class="container">
-  <div class="row justify-content-center">
+  <div class="row align-items-center">
     <div class="col-md-6">
+    <%= link_to "<i class='fas fa-2x fa-arrow-left'></i>".html_safe, :back, class: 'mb-3' %>
       <div class="card">
-        <div class="card-header">
-          <h2 class="text-center">Sign up</h2>
-        </div>
-        <div class="card-body">
-          <%= link_to "<i class='fas fa-arrow-left'></i> Back".html_safe, :back, class: 'btn btn-secondary mb-3' %>
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form" }) do |f| %>
-            <%= render "devise/shared/error_messages", resource: resource %>
-            <div class="container gap-3">
-              <div class="form-group">
-                <%= f.label :name %>
-                <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
-              </div>
-              <div class="form-group">
-                <%= f.label :email %>
-                <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
-              </div>
-
-              <div class="form-group">
-                <%= f.label :password %>
-                <% if @minimum_password_length %>
-                <em>(<%= @minimum_password_length %> characters minimum)</em>
-                <% end %>
-                <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
-              </div>
-
-              <div class="form-group">
-                <%= f.label :password_confirmation %>
-                <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-              </div>
+      <a class="navbar-brand auto-center justify-items-center" href="#">Register</a>
+        <div class="container position-fixed justify-content-center mt-3">
+        <p class="notice"><%= notice %></p>
+        <p><%= alert %></p>
+            <div class="d-flex mt-6 ">
+                <div class="w-100 mt-3">
+    
+                <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                  <%= render "devise/shared/error_messages", resource: resource %>
+                
+                  <div class="field">
+                    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "w-100 py-1" %>
+                  </div>
+                
+                  <div class="field">
+                      <%= f.text_field :name, autofocus: true, required: true, autocomplete: "name", class:"form-title", class: "w-100 mt-3 py-1", placeholder:"Full name" %>
+                    </div>
+                
+                  <div class="field">
+                    <%= f.password_field :password, autocomplete: "new-password", class: "w-100 mt-3 py-1", placeholder:"password" %>
+                  </div>
+                
+                  <div class="field">
+                    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "w-100 mt-3 py-1", placeholder:"confirm password" %>
+                  </div>
+                
+                  <div class="actions">
+                    <%= f.submit "Register", class: "w-100 btn btn-md btn-primary mt-3 mb-3"%>
+                  </div>
+                <% end %>  
+                </div>
             </div>
-
-            <div class="form-group mt-2 text-center">
-              <%= f.submit "Sign up", class: "btn btn-primary" %>
-            </div>
-          <% end %>
-        </div>
+          </div>
       </div>
     </div>
   </div>
