--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,4 +1,4 @@
-<main class="container bg-black mai-cont p-0">
+<main class="container bg-light mai-cont p-0">
   <nav class="navbar navbar-expand-lg navbar-light m-0 p-0 sticky-top">
     <div class="container nav p-0 ">
       <button
