--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,9 +20,6 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-body {
-  background: #fff;
-}
 /* Custom CSS for the navbar */
 body .main-cont {
   width: 100%;
@@ -123,6 +120,15 @@ h6 {
   width: 100%;
 }
 
+.border-btn {
+  color: #9d9b9b;
+}
+
+.btn-block {
+  width: 18rem;
+  margin-top: 8rem;
+}
+
 ul,
 li {
   list-style-type: none;
@@ -162,9 +168,6 @@ nav {
   z-index: 999;
   right: 1rem;
 }
-
-
-
 
 .category-button {
   background: #5fb523;
