--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,16 +7,12 @@
 
   <section class="container">
     <div class="row justify-content-center mt-5 gap-3 sign_up_btn">
-      <div class="col-12">
-        <div class="d-flex align-items-center justify-content-center w-100">
-          <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
-        </div>
-      </div>
-      <div class="col-18">
-        <div class="d-flex align-items-center justify-content-center ">
-          <%= link_to 'Log In', new_user_session_path, class: ' log_in_btn btn btn-primary btn-lg btn-block' %>
-        </div>
-      </div>
+     
+        <%= link_to 'Log In', new_user_session_path, class: ' log_in_btn btn btn-primary btn-lg btn-block mb-3 ' %>
+
+      
+        <%= link_to 'Sign Up', new_user_registration_path, class: 'btn border-btn btn-lg btn-block-block' %>
+
     </div>
   </section>
 </div>
